-Pop ups are added, they are yet to be filled. Location and liked user list will be displayed as pop up. -Cosmetic changes are done. Pictures are now uncut, their size is also fixed, they no longer stretch inifinitely. -Like button and liked users list pop up are added. -Now feed component is ready to be implemented by using post component

--- a/purbee_frontend/src/components/post/post.scss
+++ b/purbee_frontend/src/components/post/post.scss
@@ -94,7 +94,11 @@ a, a:hover {
   }
 
   .postcard__img_link {
-    display: contents;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    justify-content: center;
+    //display: contents;
   }
 
   .postcard__bar {
